  enabled.

- Fixed exception with auto indent (Brad Mace).

- jEdit didn't compile with Sun's JDK 1.5 beta (Trevor Harmon).

- "Find Next" didn't work with directory searches where the paths
  contained symbolic links.

- Fixed highlighting of verbatim environments in LaTeX files.

- Fixed ArrayIndexOutOfBoundsException when invoking "Expand Fold"
  outside of a narrowed range.

}}}
{{{ API Changes

- Added "optional dependencies". An optional dependency looks like this:

  plugin.MyPlugin.depend.0=optional plugin AnotherPlugin 1.3.1

  An optional dependency is ignored; if AnotherPlugin does not exist,
  MyPlugin will still load. However, if AnotherPlugin is unloaded while
  jEdit is running, all plugins that depend on it, even ones with
  optional dependencies, will be reloaded.

  If your plugin does a runtime check for the existence of another
  plugin, and uses its services if it exists, then you *MUST* add an
  optional dependency on that plugin, otherwise reloading plugins will
  leave stale classes in the active class loader.

}}}

}}}

{{{ Version 4.2pre9

Thanks to Brad Mace, David Hardin,  Matthew J. Price, Ollie Rutherfurd,
Patrick Tingen, Thomas Galvin and Wiktor Adamski for contributing to
this release.

{{{ Miscellaneous

- Includes new "Create Get/Set Methods" macro (Thomas Galvin).

- Minor improvements to "Deep Indent" feature (Brad Mace).

- "Reload All Buffers" command now only asks for confirmation if there
  are buffers with unsaved changes (Ollie Rutherfurd).

}}}
{{{ Syntax Highlighting

- Updated Visual FoxPro syntax highlighting (Matthew J. Price).

- Updated Lisp syntax highlighting (David Hardin).

- Updated Progress syntax highlighting (Patrick Tingen)

}}}
{{{ Bug Fixes

- Horizontal scroll bar was not updated sometimes.

- The code that determines if a selection is being dragged is now much
  more accurate; for example, with rectangular selections is only
  registers a drag if the mouse is actually within the rectangular